# zeitgeist

./: .env  .gitignore  Dockerfile  README.md  dashboard.html  embeddings.json  index.html  output.json  pyproject.toml  zeitgeist.py
.github/workflows/: build-and-push.yml  daily_report.yml
2025/07/22/: index.html
2025/07/23/: index.html
2025/07/24/: index.html
2025/07/25/: index.html
2025/07/26/: index.html
2025/07/27/: index.html
2025/07/28/: index.html
2025/07/29/: index.html
2025/07/30/: index.html
2025/07/31/: index.html
2025/08/01/: index.html
2025/08/02/: index.html
2025/08/03/: index.html
2025/08/04/: index.html
2025/08/05/: index.html
2025/08/06/: index.html
2025/08/07/: index.html
2025/08/08/: index.html
2025/08/09/: index.html
2025/08/10/: index.html
2025/08/11/: index.html
2025/08/12/: index.html
2025/08/13/: index.html
2025/08/14/: index.html
2025/08/15/: index.html
2025/08/16/: index.html
2025/08/17/: index.html
2025/08/18/: index.html
2025/08/19/: index.html
2025/08/20/: index.html
2025/08/21/: index.html
2025/08/22/: index.html
2025/08/23/: index.html
2025/08/24/: index.html
2025/08/25/: index.html
2025/08/26/: index.html
2025/08/27/: index.html
2025/08/28/: index.html
2025/08/29/: index.html
2025/08/30/: index.html
2025/08/31/: index.html
2025/09/01/: index.html
2025/09/02/: index.html
2025/09/03/: index.html
templates/: about_me.mako  citation_prompt.mako  events_prompt.mako  index.html.mako  relevant_prediction_prompt.mako  synthesizing_prompt.mako
(+115 files in other folders)
